--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <li>Active Staff</li>
         </ul>
 
-        <a href="https://aternos.org/" class="button">Join Now</a>
+        <a href="https://discord.gg/ChPtRdGAHe" class="button">Join The Discord Now!</a>
     </div>
 </body>
 </html>
