--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
     <!-- Banner Image -->
-    <img src="https://imgur.com/a/RbTZW0A" alt="SMPX Server Banner" class="banner">
+    <img src="Screenshot_2025-03-06_at_4.17.49_PM.png" alt="SMPX Server Banner" class="banner">
 
     <header>Welcome to SMPX!</header>
     
