--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <li>Active Staff</li>
         </ul>
 
-        <a href="https://discord.gg/ChPtRdGAHe" class="button">Join Now</a>
+        <a href="https://discord.gg/ChPtRdGAHe" class="button">Click Here To Join The Discord Now!</a>
     </div>
 </body>
 </html>
