--- a/index.html
+++ b/index.html
@@ -85,4 +85,9 @@
         <a href="https://discord.gg/ChPtRdGAHe" class="button">Click Here To Join The Discord Now!</a>
     </div>
 </body>
+
+<body>
+    <text>If the instructions are too hard, watch this:https://youtu.be/rof_y0gRS7g?feature=shared</text>
+</body>
+    
 </html>
